fix column class alignments

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -205,7 +205,7 @@ tr.q-table-state-visible {
   width: 50%;
   position: relative;
   left: 50%;
-  text-align: left;
+  text-align: left !important;
   padding-left: 4px;
   float: left;
 }
